# mouchak-mail

./: .clippy.toml  .dockerignore  .env.example  .gitignore  .mcp.json  .pmat-gates.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE.md  Makefile  README-QUICK.md  README.md  WALKTHROUGH.md  beads_report_mcp-agent-mail-rs_2025-12-20.md  bun.lockb  cliff.toml  deny.toml  docker-compose.yml  init-tools.md  justfile  llms.txt  mutants.toml  package.json  pmat.toml  release-please-config.json  web-transform.md
crates/libs/lib-common/: Cargo.toml
crates/libs/lib-common/src/: config.rs  robot.rs  tracing.rs
crates/libs/lib-common/tests/: robot_tests.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: activity.rs  agent.rs  agent_capabilities.rs  agent_link.rs  archive_browser.rs  attachment.rs  build_slot.rs  escalation.rs  export.rs  file_reservation.rs  identity.rs  macro_def.rs  message.rs  message_recipient.rs  mod.rs  orchestration.rs  overseer_message.rs  precommit_guard.rs  product.rs  project.rs  project_sibling_suggestion.rs  time_travel.rs  tool_metric.rs
crates/libs/lib-core/src/store/: archive_lock.rs  file_safety.rs  git_store.rs  mod.rs  repo_cache.rs
crates/libs/lib-core/src/utils/: image_processing.rs  mistake_detection.rs  project_identity.rs  validation.rs
crates/libs/lib-core/tests/: activity_tests.rs  agent_link_tests.rs  agent_tests.rs  archive_browser_tests.rs  archive_lock_tests.rs  attachment_tests.rs  capability_tests.rs  cc_bcc_tests.rs  concurrent_tests.rs  escalation_tests.rs  export_scrub_tests.rs  export_tests.rs  file_reservation_tests.rs  fts_tests.rs  identity_tests.rs  integration.rs  macro_tests.rs  message_tests.rs  orchestration_tests.rs  overseer_message_tests.rs  performance_benchmarks.rs  precommit_guard_tests.rs  product_tests.rs  project_sibling_suggestion_tests.rs  project_tests.rs  query_locality_tests.rs  quota_tests.rs  resource_cleanup_tests.rs  time_travel_tests.rs  tool_metric_tests.rs  unified_inbox_tests.rs
crates/libs/lib-core/tests/common/: mod.rs
crates/libs/lib-mcp/: Cargo.toml
crates/libs/lib-mcp/src/: lib.rs  tools.rs
crates/libs/lib-mcp/src/tools/: agent.rs  archive.rs  builds.rs  contacts.rs  errors.rs  export.rs  files.rs  helpers.rs  macros.rs  messaging.rs  mod.rs  observability.rs  outbox.rs  params.rs  precommit.rs  products.rs  project.rs  resources.rs  reviews.rs  schema.rs
crates/libs/lib-mcp/tests/: COVERAGE.md  agent_tests.rs  archive_tests.rs  attachments_tests.rs  builds_tests.rs  contacts_tests.rs  docs_tests.rs  error_code_tests.rs  files_tests.rs  macro_convenience_tests.rs  mcp_resource_api_tests.rs  messaging_tests.rs  observability_tests.rs  product_tools_tests.rs  resource_tests.rs  schema_generation_tests.rs  test_convenience_tools.rs  test_domain_modules.rs  test_export_reviews.rs  test_macro_impl.rs  test_macro_tools.rs  test_precommit_files.rs  test_summarize_thread.rs  tool_dispatch_tests.rs
crates/libs/lib-server/: Cargo.toml
crates/libs/lib-server/src/: api.rs  auth.rs  error.rs  lib.rs  ratelimit.rs  static_files.rs  tools.rs
crates/libs/lib-server/src/api/: attachments.rs  export.rs  unified_inbox.rs
crates/libs/lib-server/tests/: http_transport_tests.rs  mcp_integration.rs  tools_tests.rs  xss_tests.rs
crates/libs/mouchak-mail-common/: Cargo.toml
crates/libs/mouchak-mail-common/src/: config.rs  error.rs  lib.rs  robot.rs  tracing.rs
crates/libs/mouchak-mail-common/tests/: robot_tests.rs
crates/services/mcp-agent-mail/: Cargo.toml
crates/services/mcp-agent-mail/src/: main.rs  panic_hook.rs  robot_help.rs
crates/services/mcp-agent-mail/tests/: cli_guard.rs  cli_products.rs  cli_service.rs
crates/services/mcp-cli/: Cargo.toml
crates/services/mcp-cli/src/: main.rs
crates/services/mcp-cli/tests/: guard_cli_tests.rs
crates/services/mcp-server/: Cargo.toml
crates/services/mcp-server/src/: api.rs  auth.rs  error.rs  main.rs  tools.rs
crates/services/mcp-stdio/: Cargo.toml
crates/services/mcp-stdio/src/: main.rs  tools.rs
crates/services/mcp-stdio/tests/: activity_tests.rs  integration.rs
crates/services/mouchak-mail/: Cargo.toml
crates/services/mouchak-mail-cli/: Cargo.toml
crates/services/mouchak-mail-cli/src/: main.rs
crates/services/mouchak-mail-cli/tests/: guard_cli_tests.rs
crates/services/mouchak-mail-http/: Cargo.toml
crates/services/mouchak-mail-http/src/: main.rs
crates/services/mouchak-mail-stdio/: Cargo.toml
crates/services/mouchak-mail-stdio/src/: main.rs  tools.rs
crates/services/mouchak-mail-stdio/tests/: activity_tests.rs  integration.rs
crates/services/mouchak-mail/src/: main.rs  robot_help.rs
crates/services/web-ui-leptos/: .gitignore  Cargo.toml  bun.lockb  index.html  package.json  tailwind.config.js
crates/services/web-ui-leptos/baselines/: .gitkeep
crates/services/web-ui-leptos/scripts/: accessibility-audit.ts  visual-regression.ts
crates/services/web-ui-leptos/src/: app.rs  lib.rs
crates/services/web-ui-leptos/src/api/: client.rs
crates/services/web-ui-leptos/src/components/: avatar.rs  breadcrumb.rs  button.rs  card.rs  compose_message.rs  cva.rs  dialog.rs  filter_bar.rs  info_banner.rs  inline_message_detail.rs  input.rs  layout.rs  mark_read_button.rs  message_detail_header.rs  mod.rs  overseer_composer.rs  project_card.rs  select.rs  separator.rs  skeleton.rs  split_view.rs
crates/services/web-ui-leptos/src/pages/: agents.rs  archive.rs  attachments.rs  dashboard.rs  file_reservations.rs  inbox.rs  mod.rs  (+4 more)
crates/services/web-ui-leptos/style/: lucide.css  tailwind.css
crates/tests/e2e/: Cargo.toml
crates/tests/e2e/src/: config.rs  fixtures.rs  lib.rs
crates/tests/e2e/tests/: api.rs  archive_workflow.rs  auth_rate_limit.rs  cli_tests.rs  console_check.rs  contact_policy.rs  guard_integration.rs  mail_viewer.rs  multi_agent_orchestration.rs  negative_cases.rs  share_integration.rs  walkthrough.rs  web_ui.rs  worktrees_e2e.rs
(+349 files in other folders)
