[workspace]
resolver = "2"
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-common",
    "crates/libs/lib-server",
    "crates/services/mcp-server",
    "crates/services/mcp-cli",
    "crates/services/mcp-stdio",
    "crates/services/mcp-agent-mail",
    "crates/services/web-ui-leptos",
    "crates/libs/lib-mcp",
    "crates/tests/e2e",
]

# Root package for benchmarks
[package]
name = "mcp-agent-mail-benches"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/Avyukth/mcp-agent-mail-rs"
license = "MIT"

[[bin]]
name = "concurrent-agents-bench"
path = "benches/concurrent_agents.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[workspace.dependencies]
# Web Framework
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id"] }
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"], default-features = false }

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Database
libsql = { version = "0.9.29", features = [] }
chrono = { version = "0.4.42", features = ["serde"] }

# Git
git2 = "0.20.3"

# Templating / Markdown
minijinja = "2.14.0"
pulldown-cmark = "0.13.0"

# MCP Protocol SDK (Official)
rmcp = { version = "0.11.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1.1.0"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging/Tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
base64 = "0.22.1"

# =============================================================================
# Workspace Lints - Production Hardening
# =============================================================================
[workspace.lints.rust]
# Safety
unsafe_code = "deny"
# Correctness
unused_must_use = "deny"

[workspace.lints.clippy]
# Production safety - allow for now, enable incrementally
# These are here as documentation of target state:
# unwrap_used = "warn"      # TODO: Enable after fixing production code
# expect_used = "warn"      # TODO: Enable after fixing production code
# panic = "warn"            # TODO: Enable after fixing production code
# Code quality
unnecessary_wraps = "warn"
# Performance
inefficient_to_string = "deny"  # Easy to fix, prevents performance issues
# Style consistency
enum_glob_use = "warn"

# =============================================================================
# WASM-optimized release profile for web-ui-leptos
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

# Server binaries: speed-optimized (vs WASM size-optimized above)
[profile.release-server]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

