[workspace]
resolver = "2"
members = [
    "crates/libs/mouchak-mail-core",
    "crates/libs/mouchak-mail-common",
    "crates/libs/mouchak-mail-server",
    "crates/services/mouchak-mail-http",
    "crates/services/mouchak-mail-cli",
    "crates/services/mouchak-mail-stdio",
    "crates/services/mouchak-mail",
    "crates/services/web-ui-leptos",
    "crates/libs/mouchak-mail-mcp",
    "crates/tests/e2e",
]

# Root package for benchmarks
[package]
name = "mouchak-mail-benches"
version = "0.2.3"
edition = "2024"
publish = false
repository = "https://github.com/Avyukth/mouchak-mail"
license = "MIT"
autobenches = false

[[bin]]
name = "concurrent-agents-bench"
path = "benches/concurrent_agents.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Git hooks (Rust-native)


[workspace.dependencies]
# Web Framework
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id", "set-header", "limit"] }
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"], default-features = false }

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Database
libsql = { version = "0.9.29", features = [] }
chrono = { version = "0.4.42", features = ["serde"] }

# Git
git2 = "0.20.3"

# Templating / Markdown
minijinja = "2.14.0"
pulldown-cmark = "0.13.0"

# MCP Protocol SDK (Official)
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1.1.0"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging/Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# CLI
clap = { version = "4.5.53", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
base64 = "0.22.1"

# =============================================================================
# Workspace Lints - Production Hardening
# =============================================================================
[workspace.lints.rust]
# Safety
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"  # Require unsafe blocks in unsafe fns
# Correctness
unused_must_use = "deny"
# Visibility
unreachable_pub = "warn"  # Flag unnecessarily pub items
# Formal verification: allow cfg(kani) for Kani proof harnesses
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
# Production safety - deny unwrap() to prevent panics in production code
# Test code and doc examples are allowed via module-level #[allow]
unwrap_used = "deny"
expect_used = "warn"        # expect() is OK with justification message
# panic = "warn"            # TODO: Enable after auditing panic! macro usage
# Code quality
unnecessary_wraps = "warn"
checked_conversions = "warn"  # Prefer checked arithmetic conversions
# Performance
inefficient_to_string = "deny"  # Easy to fix, prevents performance issues
# Style consistency
enum_glob_use = "warn"

# =============================================================================
# WASM-optimized release profile for web-ui-leptos
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

# Server binaries: speed-optimized (vs WASM size-optimized above)
[profile.release-server]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

