[package]
name = "lib-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
config = "0.15.19"

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Core
tokio.workspace = true

[lints]
workspace = true
