[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"
description = "Core domain logic for MCP Agent Mail"
repository = "https://github.com/Avyukth/mcp-agent-mail-rs"
license = "MIT"

[dependencies]
# Workspace dependencies
chrono.workspace = true
libsql.workspace = true
serde.workspace = true
serde_json.workspace = true
csv = "1.4.0"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
thiserror.workspace = true
uuid.workspace = true
git2.workspace = true
tracing.workspace = true
slug = "0.1.6"

# Crate-specific dependencies
strum_macros = "0.27.2" # For AsRefStr derive
tokio = { version = "1.48.0", features = ["macros"] }
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1.12.2"
lazy_static = "1.5.0"
derive_more = { version = "2.1.0", features = ["from"] }
strsim = "0.11.1"
lru = "0.16.2"
libc = "0.2.178"
hostname = "0.4.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3.23.0"
temp-env = "0.3.6"
serial_test = "3.2.0"

[lints]
workspace = true
