[package]
name = "lib-server"
version = "0.2.0"
edition = "2024"

[features]
default = []
with-web-ui = ["dep:rust-embed"]

[dependencies]
# Internal
lib-core = { path = "../lib-core" }
lib-common = { path = "../lib-common" }
lib-mcp = { path = "../lib-mcp" }

# MCP SDK
rmcp.workspace = true
http-body-util = "0.1"

# Http
axum = { workspace = true, features = ["macros"] }
tower-http.workspace = true
tower = { version = "0.5", features = ["util"] }
governor = "0.6.3"



# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono.workspace = true
base64.workspace = true
uuid.workspace = true
sanitize-filename = "0.5.0"
mime_guess = "2.0.5"

# Embedded assets (optional, for single-binary web UI)
rust-embed = { version = "8.9", optional = true }

# Auth
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-util = { version = "0.7.12", features = ["io"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
once_cell = "1.21.3"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
libsql.workspace = true
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
rand = "0.8"
rsa = "0.9"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"

# MCP testing deps
rmcp.workspace = true

[lints]
workspace = true
