[package]
name = "mouchak-mail-common"
version = "0.2.6"
edition = "2024"

[dependencies]
# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
config = "0.15.19"

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Core
tokio.workspace = true

[lints]
workspace = true
