[package]
name = "mcp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true



# Internal workspace dependency
lib-core = { path = "../../libs/lib-core" }

[lints]
workspace = true
