[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies now handled by lib-server
lib-server = { path = "../../libs/lib-server" }
lib-common = { path = "../../libs/lib-common" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true



[lints]
workspace = true
