[package]
name = "mcp-server"
version = "0.2.3"
edition = "2024"

[dependencies]
# Dependencies now handled by lib-server
lib-server = { path = "../../libs/lib-server" }
lib-common = { path = "../../libs/lib-common" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true



[lints]
workspace = true
