[package]
name = "mcp-stdio"
version = "0.2.3"
edition = "2024"
description = "MCP stdio server for Agent Mail - Claude Desktop and Antigravity integration"
repository = "https://github.com/Avyukth/mcp-agent-mail-rs"
license = "MIT"

[[bin]]
name = "mcp-stdio-server"
path = "src/main.rs"

[dependencies]
# Internal
lib-mcp = { path = "../../libs/lib-mcp" }
lib-common = { path = "../../libs/lib-common" }

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
tempfile = "3.23.0"
libsql = "0.9.29"

[dev-dependencies]
lib-core = { path = "../../libs/lib-core" }
chrono = { version = "0.4.42", features = ["serde"] }
rmcp = { version = "0.11.0" }
[lints]
workspace = true
