[package]
name = "mouchak-mail-stdio"
version = "0.2.4"
edition = "2024"
description = "MCP stdio server for Mouchak Mail - Claude Desktop and Antigravity integration"
repository = "https://github.com/Avyukth/mouchak-mail"
license = "MIT"

[[bin]]
name = "mcp-stdio-server"
path = "src/main.rs"

[dependencies]
# Internal
mouchak-mail-mcp = { path = "../../libs/mouchak-mail-mcp" }
mouchak-mail-common = { path = "../../libs/mouchak-mail-common" }

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
tempfile = "3.23.0"
libsql = "0.9.29"

[dev-dependencies]
mouchak-mail-core = { path = "../../libs/mouchak-mail-core" }
chrono = { version = "0.4.42", features = ["serde"] }
rmcp = { version = "0.11.0" }
[lints]
workspace = true
