[package]
name = "mouchak-mail"
version = "0.2.3"
edition = "2024"
description = "Gmail for coding agents - MCP-compliant mail server"
repository = "https://github.com/Avyukth/mouchak-mail"
license = "MIT"
keywords = ["mcp", "ai", "agents", "mail", "coordination"]
categories = ["command-line-utilities", "web-programming"]

[features]
default = []
with-web-ui = ["mouchak-mail-server/with-web-ui"]
sentry = [] # Optional error tracking integration

[dependencies]
# Internal
mouchak-mail-core = { path = "../../libs/mouchak-mail-core" }
mouchak-mail-common = { path = "../../libs/mouchak-mail-common" }
mouchak-mail-server = { path = "../../libs/mouchak-mail-server" }
mouchak-mail-mcp = { path = "../../libs/mouchak-mail-mcp" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP Client
reqwest.workspace = true

# Utils
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
zip = "4.1.0"
toml = "0.9.10"
once_cell = "1.21.3"
serde_yaml = "0.9.34"
serde = { workspace = true, features = ["derive"] }
walkdir = "2.5"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3"
