[package]
name = "web-ui-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

# WASM essentials
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Storage"] }

# API calls (WASM-compatible)
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared types with backend - can be enabled when lib-core has WASM feature flag
# lib-core = { path = "../../libs/lib-core", default-features = false, features = ["serde"] }

# Note: Release profile (LTO, opt-level=z) is in workspace root Cargo.toml

