[package]
name = "web-ui-leptos"
version = "0.2.4"
edition = "2024"
description = "Web UI for Mouchak Mail"
repository = "https://github.com/Avyukth/mouchak-mail"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.8.14", features = ["csr"] }
leptos_router = "0.8.10"
leptos-use = { version = "0.15", default-features = false, features = ["use_debounce_fn"] }

# WASM essentials
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Window", "Document", "Storage", "Navigator", "Clipboard", "Location"] }

# API calls (WASM-compatible)
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"

# CVA (Class Variance Authority) equivalent - shadcn/ui patterns
tailwind_fuse = "0.3.2"


# Shared types with backend - can be enabled when lib-core has WASM feature flag
# lib-core = { path = "../../libs/lib-core", default-features = false, features = ["serde"] }

# Note: Release profile (LTO, opt-level=z) is in workspace root Cargo.toml


[lints]
workspace = true
