[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Testing framework with browser support
jugar-probar = { version = "0.4", features = ["browser", "runtime"] }

# Async runtime for browser tests
tokio = { workspace = true }

# HTTP client for API tests
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }

[dev-dependencies]
# For integration with lib-core if needed
lib-core = { path = "../../libs/lib-core" }
assert_cmd = "2.0.16"
predicates = "3.1.2"

[[test]]
name = "web_ui"
path = "tests/web_ui.rs"

[[test]]
name = "api"
path = "tests/api.rs"

[[test]]
name = "walkthrough"
path = "tests/walkthrough.rs"

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"

[lints]
workspace = true
